# HttpServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  ServerConfig.hpp  compile_commands.json  config.hpp  howToReadCode.md  routes.cpp  routes.hpp  server.cpp  serverConfig.hpp
app/: CMakeLists.txt  main.cpp  test.db
app/include/: errors.hpp  middlewares.hpp  routes.hpp
app/public/home/: index.html
app/src/: routes.cpp
cmake-source-cache/fmt-build/: Makefile  cmake_install.cmake  fmt-targets.cmake
cmake-source-cache/fmt-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-source-cache/fmt-subbuild/fmt-populate-prefix/src/fmt-populate-stamp/: fmt-populate-gitclone-lastrun.txt  fmt-populate-update-info.txt
cmake-source-cache/fmt-subbuild/fmt-populate-prefix/tmp/: fmt-populate-gitclone.cmake  fmt-populate-gitupdate.cmake  fmt-populate-mkdirs.cmake
cmake-source-cache/spdlog-build/: Makefile  cmake_install.cmake
cmake-source-cache/spdlog-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-source-cache/spdlog-subbuild/spdlog-populate-prefix/src/spdlog-populate-stamp/: spdlog-populate-gitinfo.txt  spdlog-populate-update-info.txt
cmake-source-cache/spdlog-subbuild/spdlog-populate-prefix/tmp/: spdlog-populate-gitclone.cmake  spdlog-populate-gitupdate.cmake  spdlog-populate-mkdirs.cmake
include/: AsyncFileReader.hpp  AsyncFileWriter.hpp  Awaitables.hpp  BodyStream.hpp  BrotliCompressor.hpp  CacheControlMiddleware.hpp  ChunkDecoder.hpp  ChunkedBodyParser.hpp  CompressibleMimeTypes.hpp  CompressionMiddleware.hpp  CompressorFactory.hpp  ConnectionIO.hpp  Cookie.hpp  CookieStore.hpp  CorsMiddleware.hpp  EpollInstance.hpp  ErrorFactory.hpp  Executor.hpp  ExecutorContext.hpp  Generator.hpp  GzipCompressor.hpp  HeaderStore.hpp  HttpConnection.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  HttpStreamResponse.hpp  HttpTypes.hpp  ICompressor.hpp  IPoolTask.hpp  ISessionStore.hpp  IStream.hpp  InMemorySessionStore.hpp  IoUringInstance.hpp  ListenerSocket.hpp  Middleware.hpp  MimeTypes.hpp  MultipartParser.hpp  PoolTask.hpp  PoolTaskAwaitable.hpp  (+18 more)
public/home/: index.html  script.js  styles.css
rukh/: CMakeLists.txt
rukh/include/rukh/: AsyncFileReader.hpp  AsyncFileWriter.hpp  Cookie.hpp  CookieStore.hpp  ErrorFactory.hpp  Exceptions.hpp  HeaderStore.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  HttpStreamResponse.hpp  HttpTypes.hpp  MultipartParser.hpp  Router.hpp  ServerConfig.hpp  Task.hpp  ThreadPool.hpp  logUtils.hpp
rukh/include/rukh/core/: Awaitables.hpp  BodyStream.hpp  BrotliCompressor.hpp  ChunkDecoder.hpp  CompressibleMimeTypes.hpp  CompressorFactory.hpp  ConnectionIO.hpp  EpollInstance.hpp  Executor.hpp  ExecutorContext.hpp  GzipCompressor.hpp  HttpConnection.hpp  ICompressor.hpp  IPoolTask.hpp  IoUringInstance.hpp  ListenerSocket.hpp  MimeTypes.hpp  PoolTask.hpp  PoolTaskAwaitable.hpp  Socket.hpp  StreamResults.hpp  TaskState.hpp  TcpStream.hpp  TlsStream.hpp  utils.hpp
rukh/include/rukh/db/: IDatabase.hpp  Sqlite3Db.hpp
rukh/include/rukh/middleware/: CacheControlMiddleware.hpp  CompressionMiddleware.hpp  CorsMiddleware.hpp  ISessionStore.hpp  InMemorySessionStore.hpp  Session.hpp  SessionHandle.hpp  SessionMiddleware.hpp  StaticMiddleware.hpp
rukh/src/: ErrorFactory.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  HttpStreamResponse.cpp  Router.cpp  logUtils.cpp
rukh/src/core/: EpollInstance.cpp  Executor.cpp  ListenerSocket.cpp  Socket.cpp  TcpStream.cpp  TlsStream.cpp
rukh/src/middleware/: CacheControlMiddleware.cpp  CompressionMiddleware.cpp  CorsMiddleware.cpp  SessionMiddleware.cpp  StaticMiddleware.cpp
src/: CacheControlMiddleware.cpp  ChunkedBodyParser.cpp  CompressionMiddleware.cpp  ConnectionIO.cpp  CorsMiddleware.cpp  EpollInstance.cpp  ErrorFactory.cpp  Executor.cpp  HttpConnection.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  HttpStreamResponse.cpp  ListenerSocket.cpp  Router.cpp  SessionMiddleware.cpp  Socket.cpp  StaticMiddleware.cpp  TcpStream.cpp  TlsStream.cpp  logUtils.cpp
